2006-05-31  David Reveman  <davidr@novell.com>

	* include/compiz.h:
	* src/screen.c:
	* src/display.c: Add hide_skip_taskbar_windows option. (bnc 180055)

	* include/compiz.h:
	* src/window.c: Add getStartupId.

	* src/screen.c: Save initial viewport when startup notification
	is received. Fix implementation of applyStartupProperties.
	(bnc 180224)

	* src/event.c (handleEvent): Handle startup ID property changes.

	* plugins/place.c: Adjust work area to initial viewport.

	* plugins/cube.c (cubePaintTransformedScreen): Disable skydome
	animation while cube is unfolded. (bnc 179833)

	* plugins/switcher.c (switchPaintWindow): Make sure selected window is
	not clipped incorrectly when some window is transformed. (bnc 179828)

	* plugins/move.c (moveHandleEvent): Initialize xRoot and yRoot.
	(bnc 179902)

	* src/Makefile.am (INCLUDES): Add @GL_CFLAGS@. (Eric Work)

2006-05-30  Dan Winship  <danw@novell.com>

	* configure.ac: Check libwnck for wnck_window_has_name (new in
	HEAD).

	* gnome/window-decorator/gnome-window-decorator.c
	(wnck_window_get_real_name): #if HAVE_WNCK_WINDOW_HAS_NAME,
	redefine wnck_window_get_name to return NULL if the window only
	has a fallback name. bnc 173059.

	* src/event.c (handleEvent): call moveInputFocusToOtherWindow()
	before destroyWindow() when processing a DestroyNotify, or else
	the input focus can get stranded.

2006-05-26  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* plugins/scale.c (SCALE_SLOPPY_FOCUS_DEFAULT): TRUE.

	* plugins/decoration.c (decorWindowUpdate): No drop-shadow decoration
	on windows with below state.

	* src/window.c (recalcWindowType): Treat dock windows with below state
	as normal windows. (bnc #178316)

	* plugins/cube.c (cubePaintTransformedScreen): Avoid optimized case
	when more than 4 cube sides.

2006-05-25  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* src/window.c (moveResizeWindow): Don't adjust position for NorthWest