@@ -1685,6 +1685,9 @@ getClientLeader (CompWindow *w);
 char *
 getStartupId (CompWindow *w);
 
+void
+updateWindowClass (CompWindow *w);
+
 int
 getWmState (CompDisplay *display,
 	    Window      id);
